<resources>
    <string name="app_name">ReadingListApp</string>

    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="new_booklist">New Booklist</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="no_currUserId">No current user recognized</string>
    <string name="title_activity_edit_booklist">EditBooklistActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Menu_activity_title">Shelves</string>
    <string name="no_currListId">No such list recognized</string>
    <string name="title_back">Back</string>
    <string name="title_add">Add book</string>
    <string name="title_delete">Delete list</string>
    <string name="add_manually">Add manually</string>
    <string name="search_on_google_books">Search on Google Books</string>
    <string name="title_activity_select_method">Add a book</string>
    <string name="title_activity_add_manually">Add a book manually</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="desc">Description</string>
    <string name="add_book">Add book</string>
    <string name="empty_title_error">Title cannot be empty</string>
    <string name="blank_title_error">Please enter a title</string>
    <string name="error_msg">ERROR</string>
    <string name="SearchResults">Search Results</string>
    <string name="no_title">No title searched</string>
    <string name="read">Read!</string>
    <string name="done">Done!</string>
    <string name="example_text">example text this is really long it will run into the end abcdefghi jklmnop qrs tuv wxyz now I know my abcs next time wont you sing with me twinkle twingkle little star how i wonder what you are up above the world so high like a diamond in the sky twinkle twinkle little star how I wonder what you are nnnn nnnnnn nnnnn nnnnnn njjjjj jjjj jjjj jjjjjjjjjjjjj</string>
    <string name="ex_author">Author</string>
    <string name="ex_title">Title</string>
    <string name="add">Add</string>
    <string name="error_empty_email">The email cannot be empty</string>
    <string name="error_empty_password">The password cannot be empty</string>
    <string name="wait">Wait for it...</string>
    <string name="error">Error:</string>
    <string name="at">\@</string>
</resources>
