<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.ait.android.readinglistapp.ManualAddBookActivity">

    <EditText
        android:id="@+id/etManTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"/>

    <EditText
        android:id="@+id/etDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc"/>

    <Button
        android:id="@+id/btnAddBookMan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_book"/>

</LinearLayout>
