<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:text="@string/ex_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ivCover"
            android:layout_toStartOf="@+id/ivCover"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvAuthor"
            android:text="@string/ex_author"
            android:textSize="12sp"
            android:textColor="#3d3d3d"
            android:textStyle="italic"
            android:layout_below="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ivCover"
            android:layout_toStartOf="@+id/ivCover"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:id="@+id/ivCover"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="60sp"
            android:layout_height="90sp" />

        <Button
            android:id="@+id/btnDelete"
            android:text="@string/done"
            android:textSize="12sp"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCover"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_below="@+id/tvAuthor"
            android:layout_toLeftOf="@+id/btnDelete"
            android:layout_toStartOf="@+id/btnDelete"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/tvDesc"
                android:text="@string/example_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"/>
        </ScrollView>
    </RelativeLayout>
</android.support.v7.widget.CardView>